--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bower": "^1.7.7",
     "grunt": "^1.0.1",
     "grunt-contrib-uglify": "^2.1.0",
+    "grunt-ng-annotate": "^3.0.0",
     "grunt-prompt": "^1.3.3",
     "http-server": "^0.9.0"
   },
