--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "devDependencies": {
     "bower": "^1.7.7",
     "grunt": "^1.0.1",
+    "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-uglify": "^2.1.0",
+    "grunt-include-js": "^1.0.3",
+    "grunt-include-source": "^1.0.0",
     "grunt-ng-annotate": "^3.0.0",
     "grunt-prompt": "^1.3.3",
+    "grunt-script-link-tags": "^1.0.2",
     "http-server": "^0.9.0"
   },
   "author": "Fabio Marcoccia",
