--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "grunt-include-source": "^1.0.0",
     "grunt-ng-annotate": "^3.0.0",
     "grunt-prompt": "^1.3.3",
+    "grunt-replace": "^1.0.1",
     "grunt-script-link-tags": "^1.0.2",
+    "grunt-string-replace": "^1.3.1",
     "http-server": "^0.9.0"
   },
   "author": "Fabio Marcoccia",
